fixed deprecation styling